--- a/DTimplement.ipynb
+++ b/DTimplement.ipynb
@@ -1986,8 +1986,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "cd001885-83b4-4fdf-b733-49c91b661141",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "50\n"
+     ]
+    }
+   ],
+   "source": [
+    "# make a program which takes input gender and age and outputs the weight using \n",
+    "# 1. if gender == Female, output 50\n",
+    "# 2. if gender == Male, check if Age >= 20 then 70 else 55\n",
+    "\n",
+    "class Node():\n",
+    "    def __init__(self, feature_name = None, threshold = None, left = None, right = None, value = None):\n",
+    "        # for decision node\n",
+    "        self.feature_name = feature_name\n",
+    "        self.threshold = threshold\n",
+    "        self.left= left\n",
+    "        self.right = right\n",
+    "\n",
+    "        # for leaf node\n",
+    "        self.value = value\n",
+    "\n",
+    "\n",
+    "# 0 for female and 1 for male\n",
+    "def buildTree():\n",
+    "    tree = Node(\"gender\", threshold = 1)\n",
+    "    tree.left = Node(value = 50)\n",
+    "    tree.right = Node(\"age\",threshold = 20)\n",
+    "    tree.right.left = Node(value = 55)\n",
+    "    tree.right.right = Node(value = 70)\n",
+    "    return tree\n",
+    "\n",
+    "tree = buildTree()\n",
+    "def traverse(tree,features,i):\n",
+    "    if tree.value != None:\n",
+    "        return tree.value\n",
+    "    else:\n",
+    "        if tree.threshold > features[i]:\n",
+    "            return traverse(tree.left,features,i)\n",
+    "        else:\n",
+    "            return traverse(tree.right,features,i+1)\n",
+    "    \n",
+    "def check(gender,age):\n",
+    "    if gender == \"Male\":\n",
+    "        gender = 1\n",
+    "    else:\n",
+    "        gender = 0\n",
+    "    features = [gender,age]\n",
+    "    print(traverse(tree,features,0))\n",
+    "    \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "18dc8786-cfd0-4515-b64a-6f4260a7c276",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "55\n",
+      "70\n",
+      "70\n",
+      "50\n",
+      "50\n"
+     ]
+    }
+   ],
+   "source": [
+    "check(\"Male\",18)\n",
+    "check(\"Male\",20)\n",
+    "check(\"Male\",55)\n",
+    "check(\"Female\",20)\n",
+    "check(\"Female\",18)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2297167b-6f82-4c63-b13e-693df695f57f",
    "metadata": {},
    "outputs": [],
    "source": []
